--- a/task_5_fun_2/task_5_fun_2.csproj
+++ b/task_5_fun_2/task_5_fun_2.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{31DA5108-26BA-4385-9237-156D6D857F9A}</ProjectGuid>
+    <ProjectGuid>{8D3C0872-B85F-4993-99EB-7B31E1BF62B9}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>task_1</RootNamespace>
-    <AssemblyName>task_1</AssemblyName>
+    <RootNamespace>task_5_fun_2</RootNamespace>
+    <AssemblyName>task_5_fun_2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
